--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -306,7 +306,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
-  color: #333333;
+  color: #efefef;
   background-color: #ffffff;
 }
 
@@ -789,7 +789,7 @@ pre code {
 }
 
 .container-content {
-  margin-top: 50px;
+  margin-top: 60px;
 }
 
 .container:before,
@@ -1644,7 +1644,7 @@ table {
 }
 
 th {
-  text-align: left;
+  text-align: center;
 }
 
 .table {
@@ -1662,6 +1662,7 @@ th {
   line-height: 1.428571429;
   vertical-align: top;
   border-top: 1px solid #dddddd;
+  text-align: center;
 }
 
 .table > thead > tr > th {
